# SoftEtherRust

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CLEANUP_PHASE5_PREP.md  Cargo.toml  DEVELOPMENT.md  FEATURE_MATRIX.md  FFI.md  FFI_GUIDE.md  INTEGRATION_GUIDE.md  ISSUES.md  LocalBridge_Implementation_Summary.md  MODULE_ARCHITECTURE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  build-mobile.sh  cbindgen.toml  config.example.json  debug_dataplane.sh  dhcp_lease.json  sample.json  test_config.json  test_connection.sh  test_password_hash.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
VirtualTap/: Makefile  README.md
VirtualTap/include/: dns_handler.h  fragment_handler.h  icmp_handler.h  icmpv6_handler.h  tun_device.h  virtual_tap.h  virtual_tap_internal.h
VirtualTap/src/: arp_handler.c  dhcp_builder.c  dhcp_parser.c  dns_handler.c  fragment_handler.c  icmp_handler.c  icmpv6_handler.c  ip_utils.c  translator.c  tun_device.c  virtual_tap.c
VirtualTap/test/: test_basic.c  test_dhcp_builder.c
cpnclient/src/: vpnclient.rs
crates/adapter/: Cargo.toml  README.md  macos.rs
crates/adapter/src/: lib.rs
crates/cedar/: Cargo.toml  README.md
crates/cedar/src/: client_auth.rs  client_option.rs  connection.rs  connection_mgr.rs  connection_pool.rs  dataplane.rs  handshake.rs  lib.rs  redirect.rs  session.rs  session_mgr.rs  types.rs  udp_accel.rs  watermark.rs
crates/cedar/tests/: layout_guard.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/ffi/: Cargo.toml  README.md
crates/ffi/android/: README.md
crates/ffi/android/Skeleton/: README.md
crates/ffi/c_api/: Cargo.toml  README.md
crates/ffi/c_api/examples/: ffi_harness.c
crates/ffi/c_api/include/: softether_c_api.h
crates/ffi/c_api/src/: lib.rs
crates/ffi/examples/: ffi_harness.c
crates/ffi/include/: softether_ffi.h
crates/ffi/ios/: README.md
crates/ffi/ios/Skeleton/: README.md
crates/ffi/src/: api.rs  arp.rs  callbacks.rs  client_handle.rs  lib.rs  utils.rs
crates/mayaqua/: Cargo.toml  README.md
crates/mayaqua/src/: crypto.rs  error.rs  fs.rs  http.rs  lib.rs  logging.rs  memory.rs  network.rs  pack.rs
crates/pencore/: Cargo.toml  README.md
crates/pencore/src/: lib.rs  pencore.rs
crates/vpnclient/: Cargo.toml  EVENTS.md  README.md
crates/vpnclient/examples/: gen_password_hash.rs
crates/vpnclient/src/: adapter.rs  adapter_bridge.rs  auth.rs  config.rs  connection.rs  dhcp.rs  dhcp_localbridge.rs  dhcpv6.rs  lib.rs  links.rs  localbridge_test.rs  main.rs  network.rs  network_config.rs  network_mode.rs  pencore.rs  shared_config.rs  tun_bridge.rs  tunnel.rs  tunnel_protocol.rs  types.rs  vpnclient.rs
crates/vpnclient/src/modules/: client.rs  legacy.rs  mod.rs
crates/vpnclient/src/modules/auth/: mod.rs
crates/vpnclient/src/modules/bridge/: mod.rs
crates/vpnclient/src/modules/dhcp/: client.rs  mod.rs  packet_handler.rs  types.rs  v6.rs
crates/vpnclient/src/modules/network/: mod.rs
crates/vpnclient/src/modules/session/: dhcp_session.rs  manager.rs  mod.rs
crates/vpnclient/src/vpnclient/: adapter_bridge.rs  auth.rs  connection.rs  network_config.rs  policy.rs
crates/vpnclient/tests/: login_pack_parity.rs  redirect_ticket.rs
docs/: LocalBridge_Implementation.md
docs/ffi/: README.md  android.md  c-harness.md  config.md  events.md  ios.md
examples/android/: RustVpnService.kt  SoftEtherBridge.kt  SoftEtherVpnService.kt
examples/ios/: RustPacketTunnelProvider.swift  SoftEtherBridge.swift  SoftEtherPacketTunnelProvider.swift
include/: SoftEtherVPN.h
libs/adapter/: Cargo.toml  android.rs  ios.rs  linux.rs  mod.rs  windows.rs
libs/adapter/src/: arp.rs  lib.rs  translator.rs  utun_macos.rs
libs/cedar/: Cargo.toml
libs/cedar/src/: auth.rs  client_auth.rs  client_option.rs  connection.rs  connection_mgr.rs  connection_pool.rs  constants.rs  dataplane.rs  handshake.rs  lib.rs  mod.rs  session.rs  tls_backend.rs  udp_accel.rs
libs/mayaqua/: Cargo.toml
libs/mayaqua/src/: compress.rs  crypto.rs  error.rs  fs.rs  http.rs  lib.rs  logging.rs  pencore.rs  platform.rs  time.rs
libs/virtual_tap_rust/: Cargo.toml  README.md  VirtualTapRust.swift
libs/virtual_tap_rust/include/: VirtualTapRust.h
libs/virtual_tap_rust/src/: error.rs  ffi.rs  ios_utun.rs  lib.rs  packet.rs  ring_buffer.rs
libs/virtualtap/: Cargo.toml  build.rs
libs/virtualtap/src/: arp.rs  dhcp.rs  lib.rs  route_manager.rs  translator.rs  tun_device.rs
scripts/: build-android.sh  build-ios.sh  build_xcframework.sh  setup-android-toolchain.ps1  setup-android-toolchain.sh  verify_xcframework.sh
softether_ffi/: Cargo.toml  softether_ffi.h
softether_ffi/src/: config_ffi.rs  lib.rs
src/: adapter_bridge.rs  adapter_bridge_packets.rs  auth.rs  config.rs  connection.rs  error.rs  io.rs  lib.rs  links.rs  main.rs  network.rs  network_config.rs  policy.rs  tunnel.rs  types.rs  vpnclient.rs
src/adapter/: linux.rs  macos.rs  mod.rs  tun_linux.rs  utun.rs  windows.rs
src/client/: concurrent_reader.rs  connection.rs  mod.rs  multi_connection.rs  state.rs
src/crypto/: mod.rs  rc4.rs  sha0.rs
src/ffi/: android.rs  callbacks.rs  client.rs  connection.rs  ios.rs  jni.rs  mod.rs  packet_loop.rs  types.rs
src/net/: connection.rs  mod.rs  udp_accel.rs
src/packet/: arp.rs  dhcp.rs  dhcpv6.rs  ethernet.rs  fragment.rs  mod.rs  qos.rs
src/protocol/: auth.rs  constants.rs  http.rs  mod.rs  pack.rs  tunnel.rs
src/tunnel/: adaptive.rs  arp.rs  data_loop.rs  dhcp.rs  dhcp_handler.rs  mod.rs  multi_conn.rs  packet_processor.rs  runner.rs  single_conn.rs
