[workspace]
members = [
    "libs/mayaqua",
    "libs/cedar",
    "libs/adapter",
    "libs/virtual_tap_rust",
    "softether_ffi",
]
resolver = "2"

# Root package is the vpnclient binary
[package]
name = "vpnclient"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"

[[bin]]
name = "vpnclient"
path = "src/main.rs"

[dependencies]
mayaqua = { path = "libs/mayaqua" }
cedar = { path = "libs/cedar" }
adapter = { path = "libs/adapter", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
native-tls = "0.2"
x509-parser = "0.16"
libc = "0.2"

[features]
default = ["adapter"]
adapter = ["dep:adapter"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
repository = "https://github.com/SoftEtherVPN/SoftEtherVPN-Rust"
rust-version = "1.74"

# Common dependencies across all crates
[workspace.dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-log = "0.2"
rand = "0.9"
uuid = { version = "1.18", features = ["v4"] }
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.5"

# Virtual workspace (no root crate)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release.package.softether_ffi]
opt-level = "z"

