[package]
name = "softether"
version = "0.1.0"
edition = "2021"
authors = ["Devstroop Technologies (devstroop.com)"]
description = "A high-performance SoftEther VPN client written in Rust"
license = "Apache-2.0"
repository = "https://github.com/yourusername/SoftEtherRust"
keywords = ["vpn", "softether", "networking", "tunnel"]
categories = ["network-programming"]
rust-version = "1.75"

[lib]
name = "softether"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
ffi = []
jni = ["ffi"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "rt-multi-thread", "sync", "time", "io-util", "net", "macros"] }

# TLS support
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
webpki-roots = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography (for SHA-0 we implement ourselves, but SHA-1/256 from ring)
ring = "0.17"
rand = "0.8"

# Binary parsing
bytes = "1.9"

# Compression
flate2 = "1.0"

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Password prompting
rpassword = "7.3"

# DNS resolution
hickory-resolver = "0.24"

# IP utilities
ipnet = "2.10"
futures = "0.3.31"

# For TUN device and Unix hostname
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "vpnclient"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
