[package]
name = "softether_ffi"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"

[lib]
name = "softether_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
vpnclient = { path = "..", package = "vpnclient", default-features = false }
mayaqua = { path = "../libs/mayaqua" }
cedar = { path = "../libs/cedar" }
virtual_tap_rust = { path = "../libs/virtual_tap_rust" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
libc = "0.2"
base64 = { workspace = true }

[features]
default = []
