[package]
name = "cedar"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "Cedar VPN engine layer (session, connection, farm, auth, traffic)"

[dependencies]
mayaqua = { path = "../mayaqua" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
 tokio = { version = "1.0", features = ["full"] }
rand = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
native-tls = "0.2"
zeroize = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
trace = []
