[package]
name = "config"
version = "0.1.0"
edition = "2021"
description = "SoftEther client configuration: types, JSON I/O, and mapping to cedar"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
mayaqua = { path = "../mayaqua" }
cedar = { path = "../cedar" }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
