[package]
name = "softether_ffi"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
description = "C API for SoftEther VPN Rust client"
license = "Apache-2.0"

[lib]
# Build both a static library (preferred for iOS) and a dynamic library (for desktop/testing)
crate-type = ["staticlib", "cdylib"]
name = "softether_ffi"

[dependencies]
vpnclient = { path = "../vpnclient", default-features = false }
cedar = { path = "../cedar", default-features = false }
mayaqua = { path = "../mayaqua", default-features = false }
config = { path = "../config" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = { workspace = true }

[features]
default = []

[profile.release]
# Optimize for size for the FFI archive to reduce iOS staticlib size
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "symbols"
