[package]
name = "mayaqua"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
description = "Foundation layer for SoftEther VPN Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/SoftEtherVPN/SoftEtherVPN-Rust"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
tokio-tungstenite = "0.20"
rustls = "0.21"
tokio-rustls = "0.24"

# Crypto
ring = "0.16"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"

# Utilities
log = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
flate2 = "1.0"
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Feature for platform-specific functionality
windows = []
macos = []
linux = []
ios = []
android = []
trace = []

[lib]
name = "mayaqua"
path = "src/lib.rs"
