[package]
name = "vpnclient"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "SoftEther VPN client implementation in Rust"

[[bin]]
name = "vpnclient"
path = "src/main.rs"

[dependencies]
mayaqua = { path = "../mayaqua" }
cedar = { path = "../cedar" }
pencore = { path = "../pencore" }
adapter = { path = "../adapter", optional = true }
config = { path = "../config" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
x509-parser = "0.15"

# Networking
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
rand = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"

[features]
default = ["adapter"]
trace = []
adapter-tests = []
test-redirect = []
dev-proto = []
allow-insecure = []
adapter = ["dep:adapter"]

# Platform-specific network adapter
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "processthreadsapi"] }
