[package]
name = "adapter"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "Virtual network adapter management for SoftEther VPN client"

[dependencies]
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["process", "rt", "time", "net"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"
tun = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "processthreadsapi"] }
