[package]
name = "cedar"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "Cedar VPN engine layer (session, connection, farm, auth, traffic)"

[dependencies]
mayaqua = { path = "../mayaqua", features = ["compress"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
rand = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }

# SOFTETHER PATCH: Using local rustls fork with increased MAX_FRAGMENT_LEN (16KB -> 64KB)
# to support SoftEther VPN's non-standard large TLS records
rustls = { path = "../rustls/rustls", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
webpki-roots = "0.25"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["compress"]
compress = ["mayaqua/compress"]
trace = []
udp-accel = []
nat-traversal = []
