[package]
name = "mayaqua"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
description = "Foundation layer for SoftEther VPN Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/SoftEtherVPN/SoftEtherVPN-Rust"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
tokio-tungstenite = { version = "0.20", optional = true }
rustls = { version = "0.21", optional = true }
tokio-rustls = { version = "0.24", optional = true }

# Crypto
ring = "0.16"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"

# Utilities
log = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
flate2 = { version = "1.0", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
# Keep defaults to preserve behavior outside FFI builds. The FFI crate depends on mayaqua with
# default-features = false, which disables these heavy dependencies for iOS.
default = ["compress", "tls", "websocket"]

# Feature for platform-specific functionality
windows = []
macos = []
linux = []
ios = []
android = []
trace = []

# Subsystem toggles
compress = ["dep:flate2"]
tls = ["dep:rustls", "dep:tokio-rustls"]
websocket = ["dep:tokio-tungstenite"]

[lib]
name = "mayaqua"
path = "src/lib.rs"
