[package]
name = "virtual_tap_rust"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"

[lib]
name = "virtual_tap_rust"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# System calls for iOS utun device
nix = { version = "0.29", features = ["net", "ioctl", "socket"] }
libc = "0.2"

# Logging
tracing = { workspace = true }

# Concurrency primitives
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific dependencies
core-foundation = "0.9"
core-foundation-sys = "0.8"

[features]
default = []
# Enable detailed packet logging
packet-logging = []
